# poker_sim

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/commands/: commit.md  log-experiment.md
agents/: __init__.py  base.py  human_agent.py  random_agent.py
agents/neural/: __init__.py  agent.py  encoding.py  network.py
agents/rl/: __init__.py  agent.py
cfr/: __init__.py  abstraction.py  cfr_opponent.py  cfr_trainer.py  exploitability.py
config/: __init__.py  settings.py
deep_cfr/: __init__.py  memory.py  network.py  opponent.py  strategy.py  trainer.py  traverse.py
docs/: CLAUDE_CODE_CUSTOM_COMMANDS.md  anti-exploitation.md  architecture-gaps.md  evaluation-system.md  experiment-log.md  multi-player-plan.md  single-deep-cfr-plan.md  v2-reinforcement-learning.md  v3-attention-architecture.md  v4-tiny-recursive-models.md
evaluation/: __init__.py  evaluator.py  metrics.py  opponents.py
genetics/: __init__.py  crossover.py  evolution.py  fitness.py  mutation.py  population.py  selection.py
models/: __init__.py  manager.py
models/cfr_v2/: metrics.json
models/cfr_v3/: metrics.json
models/deep_cfr/: config.json
models/deep_cfr_test/: config.json
models/deep_cfr_v2/: config.json
models/deep_cfr_v3/: config.json
models/deep_cfr_v4/: config.json
models/test-elo/: metadata.json
models/test-jax/: metadata.json
models/test-v32-opt/: metadata.json
models/test-v33/: metadata.json
models/test-v33-learn/: metadata.json
models/test-v33b/: metadata.json
models/test-v33c/: metadata.json
models/test-v34/: metadata.json
models/v10/: metadata.json
models/v11/: metadata.json
models/v2-jax/: metadata.json
models/v2-test/: metadata.json
models/v3/: metadata.json
poker/: __init__.py  betting.py  cards.py  game.py  hand_evaluator.py  player.py  pot.py  table.py
poker_jax/: __init__.py  deck.py  encoding.py  game.py  hands.py  network.py  state.py
simulation/: __init__.py  runner.py  statistics.py  tournament.py
tests/: __init__.py  conftest.py  test_chip_accounting.py  test_deck.py  test_game.py  test_hands.py  test_integration.py
training/: __init__.py  buffer.py  elo.py  equity.py  jax_ppo.py  jax_trainer.py  logging.py  ppo.py  rewards.py  trainer.py
ui/: __init__.py  display.py
utils/: __init__.py  device.py
(+7 files in other folders)
